message system and button css template

--- a/tasks/templates/tasks/task_detail.html
+++ b/tasks/templates/tasks/task_detail.html
@@ -26,10 +26,10 @@
             </dl>
         </div>
         <div class="px-4 py-4 sm:px-6 flex justify-end space-x-4">
-            <a href="{% url "task-update" task.pk %}" class="inline-flex items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+            <a href="{% url "task-update" task.pk %}" class="btn btn-indigo">
                 Edit Task
             </a>
-            <a href="{% url "task-delete" task.pk %}" class="inline-flex items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-red-600 hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500">
+            <a href="{% url "task-delete" task.pk %}" class="btn btn-red">
                 Delete
             </a>
         </div>
