--- a/static/css/input.css
+++ b/static/css/input.css
@@ -1,3 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+/* button boilarplate. use it like "btn btn-red */
+.btn {
+  @apply inline-flex items-center px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white focus:outline-none focus:ring-2 focus:ring-offset-2;
+}
+
+.btn-indigo {
+  @apply bg-indigo-600 hover:bg-indigo-700 focus:ring-indigo-500;
+}
+
+.btn-red {
+  @apply bg-red-600 hover:bg-red-700 focus:ring-red-500;
+}
+
+.btn-green {
+    @apply bg-green-600 hover:bg-green-700 focus:ring-green-500;
+  }
+  
+  .btn-gray {
+    @apply bg-gray-600 hover:bg-gray-700 focus:ring-gray-500;
+  }
