--- a/tasks/templates/tasks/task_form.html
+++ b/tasks/templates/tasks/task_form.html
@@ -32,8 +32,8 @@
             {% endif %}
         </div>
         <button type="submit"
-                class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-2 px-4 rounded">Save</button>
+                class="btn btn-green">Save</button>
         <a href="{% url 'task-list' %}"
-           class="ml-2 bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded">Cancel</a>
+           class="btn btn-gray">Cancel</a>
     </form>
 {% endblock %}
