--- a/templates/base/base.html
+++ b/templates/base/base.html
@@ -8,6 +8,7 @@
             {% block title %}
             {% endblock title %}
         </title>
+        <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
         <link rel="stylesheet" href="{% static "css/output.css" %}">
     </head>
     <body class="flex flex-col min-h-screen">
